objects/MobileVizArt__Mobile_Object_Style__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The custom setting is used for setting mobile object  style</description>
    <fields>
        <fullName>MobileVizArt__Color_Code__c</fullName>
        <description>rgb color code</description>
        <label>Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Icon_Path__c</fullName>
        <description>icon path url</description>
        <label>Icon Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to record if the record is from standard objects</description>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__StyleName__c</fullName>
        <description>style name</description>
        <label>StyleName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mobile Object Style</label>
</CustomObject>